# Extio-Lib

./: .gitignore  LICENSE.md  README.md  pyproject.toml  test.py
extio/: __init__.py  _chasters.py  _colors.py  _keys.py  _waitkey.py  test.py
extio.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
